<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mohammedayad.popularmovies.MovieDetails">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray"
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movieTitle"
        android:textSize="42sp"
        android:textColor="@color/colorWhite"
        android:text="@string/movie_title"
        android:layout_margin="10dp"

        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            >
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/fullMoviePoster"
                    android:src="@mipmap/ic_launcher"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/releaseDate"
                    android:text="@string/release_date"
                    android:textSize="25sp"
                    android:textColor="@color/colorLightGray"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/voteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/vote_average"
                    android:textColor="@color/colorLightGray"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/movieRate"
                    android:src="@drawable/default_star"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    />
                <Button
                    android:id="@+id/showReviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/show_reviews"
                    android:layout_marginTop="24dp"
                    />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overview"
                android:textSize="25sp"
                android:textColor="@color/colorLightGray"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlack"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorLightGray"
                android:textSize="25sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/playTrailerOne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/play_trailer" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/play_trailer_one"
                    android:textColor="@color/colorLightGray"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:weightSum="2"
                android:layout_marginLeft="24dp"
                >
                <ImageButton
                    android:id="@+id/playTrailerTwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/play_trailer"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_trailer_two"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/colorLightGray"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>

</LinearLayout>

